Fixed margin-top for home screen row and footer margin-top on mobile

--- a/mission-ceramics/src/styles/Footer.scss
+++ b/mission-ceramics/src/styles/Footer.scss
@@ -42,6 +42,9 @@
 
 // MEDIA QUERIES
 @media (max-width: 768px) {
+  .footer-container {
+    margin-top: 0;
+  }
   .footer-content {
     float: left;
   }
