--- a/mission-ceramics/src/styles/Home.scss
+++ b/mission-ceramics/src/styles/Home.scss
@@ -239,7 +239,8 @@
 
 @media (max-width: 768px) {
   .row1 {
-    margin-top: 120px;
+    // margin-top: 80px;
+    margin-top: 62.5px;
   }
 
   .home-items-column {
